@@ -1,3 +1,7 @@
+2007-06-03  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/main.py: Catch IOError on explicitly loaded games (Bug #442383)
+
 2007-05-28  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Change 2D knights to face left (Bug #434496)
